# DEDS_repository

./: Portfolio.docx  Practicum_2.1_Opdrachten.ipynb  Practicum_2.2_Opdrachten.ipynb  Practicum_2.3_Opdrachten.ipynb  Practicum_2.3_Opdrachten_A-Delgado.ipynb  Practicum_3.1_Opdrachten.ipynb  Practicum_3.1_Opdrachten_A-Delgado.ipynb  Practicum_3.2_Opdracht.ipynb  Practicum_3.2_Opdracht_A-Delgado.ipynb  README.md  Script.ipynb  pyproject.toml
Assets/Week 1 - Behoeftebepaling/Deel 1 - Formulering/: HC 1.1.pptx  Opdrachtformulering.docx  (+1 more)
Assets/Week 10/: Opdracht week 10 - NN.docx
Assets/Week 3/: Sorting Algorithms in Python – Real Python.html
Assets/Week 4/: Insertion_Statements.sql  Tables.sql  Triggers.sql
Week 1/: Portfolio.docx
Week 10/: Neural_Network.cs  README.md
Week 10/Simple_Neural_Network/: Simple_Neural_Network.sln
Week 11/: 2020_Turnover.csv  2021_Turnover.csv  2022_Turnover.csv  Datamine.ipynb  Enquete resultaat  Enquete.csv  age_group_1_SALES_PERCENT  week 11 conclusie.md
Week 12/Brondata/: AenC.db  NorthWind.db
Week 2/: Practicum_2.3_Opdrachten_A-Delgado.ipynb
Week 3/: Practicum_3.2_Opdracht_A-Delgado.ipynb
Week 4/: Practicum_4.3_Opdracht_A-Delgado.ipynb  Sterdiagram.csv  Week_4.md
Week 5/: Week_5.md
Week 6/: GreatOutdoors DW Analyserapport.pbix  README.md
Week 7/: Onderzoek Generative AI.docx
Week 8/: Practicum_8.1_Regressiemodellen.ipynb  Practicum_8.2_Classificatiemodellen.ipynb  Predicted_Sales.csv  README.md
Week 9/: Practicum_9.1_Clusteringmodellen.ipynb  Practicum_9.2_Frequent_Itemsets.ipynb  README.md
(+19 files in other folders)
