[tool.poetry]
name = "deds-portfolio"
version = "0.1.0"
description = ""
authors = ["DKnightAnon <a.r.c.delgado@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.4"
pyodbc = "^5.1.0"
loguru = "^0.7.2"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
apriori-python = "^1.0.4"
apyori = "^1.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
